# CourseAdvisor

./: .gitignore  components.py  main.py  pyproject.toml  requirements.txt  universities.csv
courseadvisor/: main.py
courseadvisor/pages/: 1_prof.py
pages/: 1_prof.py
