[project]
name = "courseadvisor"
version = "0.1.0"
description = ""
authors = [
    {name = "Riddhimaan-Senapati",email = "rsenapati@umass.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "llama-index-core (>=0.12.14,<0.13.0)",
    "llama-index-llms-openai (>=0.3.14,<0.4.0)",
    "llama-index-embeddings-openai (>=0.3.1,<0.4.0)",
    "llama-index-vector-stores-chroma (>=0.4.1,<0.5.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "llama-index-packs-raptor (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
